# stalker-gamma-online

./: .gitignore  SETUP_GUIDE.md
.claude/: CLAUDE.md
gamma-mp/: BUG_TRACKER.md  CLAUDE_CODE_BUILD_DX11.md  CLAUDE_CODE_CLIENT_INSTALL.md  CLAUDE_CODE_CONNECTION_MAP.md  CLAUDE_CODE_DEPLOY.md  CLAUDE_CODE_DEPLOY_MENU.md  CLAUDE_CODE_FIX_DLL_LOADING.md  CLAUDE_CODE_MOD_AUDIT.md  CLAUDE_CODE_PATCH_AND_REDEPLOY.md  CLAUDE_CODE_PROMPT.md  CLAUDE_CODE_REBUILD_DEPLOY.md  CLAUDE_CODE_SETUP_INFRA.md  CLAUDE_CODE_SETUP_PHASE1.md  CLAUDE_CODE_TEST.md  TEST_CHECKLIST.md  deploy.ps1  find_sim_pop.ps1  release-README.md  setup.ps1  wf.py
gamma-mp/audit_results/: MASTER_AUDIT_REPORT.md  findings_0.md  findings_1.md  findings_2.md  findings_3.md  findings_4.md  findings_5.md  findings_6.md  write_f6.py
gamma-mp/docs/: 41526.txt  BUILD_GUIDE.md  CONNECTION_MAP.md  DISCOVERIES.md  PHASE1_AUDIT.md  PHASE1_IMPLEMENTATION_MAP.md
gamma-mp/engine-patch/: 0008_script_engine_soft_fail.patch  0009_script_engine_soft_fail_extend.patch  README.md  alife_simulator_script.cpp.patch  alife_update_manager.cpp.patch  alife_update_manager.h.patch  level_script.cpp.patch  script_game_object.h.patch  script_game_object3.cpp.patch  script_game_object_script3.cpp.patch
gamma-mp/gns-bridge/: CMakeLists.txt  gns_bridge.cpp  gns_bridge.h  gns_bridge_luabind.cpp  gns_bridge_poll.cpp  gns_luabind.cpp
gamma-mp/lua-sync/: mp_alife_guard.script  mp_client_state.script  mp_core.script  mp_host_events.script  mp_protocol.script  mp_puppet.script  mp_ui.script
gamma-mp/tests/: framework.lua  loader.lua  (+12 more)
(+8 files in other folders)
